[project]
name = "data-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "dcurry",email = "dcurry09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyterlab (>=4.4.2,<5.0.0)",
    "jupyterlab-git (>=0.51.1,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
